syntax = "proto3";

package proto;

option go_package = "github.com/nk-nigeria/cgp-common/proto";

enum Dice {
  DICE_UNSPECTIFIED = 0;
  DICE_1 = 1;
  DICE_2 = 2;
  DICE_3 = 3;
  DICE_4 = 4;
  DICE_5 = 5;
  DICE_6 = 6;
}

enum SicboBetCell {
  SICBO_CELL_UNSPECIFIED = 0; // unused
  SICBO_CELL_SMALL = 1; // x1
  SICBO_CELL_BIG = 2; 
  SICBO_CELL_1 = 11; // x number of same face
  SICBO_CEll_2 = 12;
  SICBO_CELL_3 = 13;
  SICBO_CELL_4 = 14;
  SICBO_CELL_5 = 15;
  SICBO_CELL_6 = 16;
  SICBO_CELL_DOUBLE_1 = 21; // x10
  SICBO_CELL_DOUBLE_2 = 22;
  SICBO_CELL_DOUBLE_3 = 23;
  SICBO_CELL_DOUBLE_4 = 24;
  SICBO_CELL_DOUBLE_5 = 25;
  SICBO_CELL_DOUBLE_6 = 26;
  SICBO_CELL_TRIPLE = 31; // x30
  SICBO_CELL_TOTAL_4 = 41; // x60
  SICBO_CELL_TOTAL_17 = 42;
  SICBO_CELL_TOTAL_5 = 43; // x30
  SICBO_CELL_TOTAL_16 = 44;
  SICBO_CELL_TOTAL_6 = 45; // x18
  SICBO_CELL_TOTAL_15 = 46;
  SICBO_CELL_TOTAL_7 = 47; // x12
  SICBO_CELL_TOTAL_14 = 48;
  SICBO_CELL_TOTAL_8 = 49; // x8
  SICBO_CELL_TOTAL_13 = 50;
  SICBO_CELL_TOTAL_9 = 51; // x7
  SICBO_CELL_TOTAL_12 = 52;
  SICBO_CELL_TOTAL_10 = 53; // x6
  SICBO_CELL_TOTAL_11 = 54;
}

message SicboBet {
  int64 chips = 2;
  SicboBetCell cell = 3;
}

message SicboBetResult {
  SicboBet bet = 1;
  bool is_win = 2;
}

message SicboPlayerBet {
  string user_id = 1;
  SicboBetAction action = 2;
  repeated SicboBet bets = 3;
}

message SicboPlayerBetResult {
  string user_id = 1;
  repeated SicboBetResult list = 2;
}

enum SicboBetAction {
  SICBO_BET_NORMAL = 0;
  SICBO_BET_REBET = 1;
  SICBO_BET_DOUBLE = 2;
}

message SicboHand {
  repeated Dice dices = 1;
}

message SicboGameFinish {
  SicboHand hand = 1;
  repeated SicboBetCell win_cells = 3;
  repeated SicboPlayerBetResult list_bet_result = 4;
}

message SicboBetCellInfo {
  SicboBetCell cell = 1;
  int64 chips = 2;
  int32 n_user_bet = 3;
}

message SicboUpdateDesk {
  int32 n_players = 1;
  bool is_update_user_bet = 2;
  bool is_update_desk_cell = 3;
  bool is_update_game_history = 4;
  SicboPlayerBet user_bet = 5;
  repeated SicboBetCellInfo desk_cell = 6;
  repeated SicboHand history = 7;
}

enum SicboBetRejectReason {
  UNSPECIFIED = 0;
  BALANCE_NOT_ENOUGH = 1;
  PREVIOUS_BET_NOT_EXIST = 2;
  ALREADY_BET = 3;
}

message SicboActionReject {
  SicboBetRejectReason reason = 1;
}